Adjust thumbnail size to match the display size on the NTP

This makes the NTP thumbnails look less blurry (before/after
screenshots can be found on the bug). As a bonus, we'll take smaller
screenshots, saving CPU/GPU cycles and disk space.

As a fun fact, the current width of 212 dp has been in place since 2009
(https://codereview.chromium.org/194028), so it has survived at least
two NTP redesigns/rewrites. The height has been updated once in 2014
(https://codereview.chromium.org/564973003), to closer match the aspect
ratio of the NTP. I don't know why the size wasn't fully matched to the
NTP at that point.

Bug: 734981
Change-Id: Ifecfa28e4ca97d17f819b6aefb63fba915235d95
Reviewed-on: https://chromium-review.googlesource.com/543143
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481481}
Former-commit-id: 7c65a26c058cf485c61809dfa70f8cc9d92d5560